--- a/style.css
+++ b/style.css
@@ -7,3 +7,15 @@ img{
     height: 200px;
     border-radius: 50%;
 }
+
+@media (max-width: 600px) {
+    img {
+        max-width: 150px;
+    }
+}
+
+@media (max-width: 400px) {
+    img {
+        max-width: 120px;
+    }
+}
